--- a/Assignment9_WebVisualizations/index.html
+++ b/Assignment9_WebVisualizations/index.html
@@ -65,10 +65,8 @@
                     equator.  To accomplish this analysis, we first pulled data from the OpenWeatherMap
                     API to assemble a dataset of over 500 cities. </p> <br>
                 <p> After assembling the dataset, Matplotlib was used to plot various aspects of weather
-                    vs. latitude. Factors analyzed included: temperature, cloudiness, wind-speed and humidity. </p> <br>
-                <p> Additionally, Matplotlib was used to plot aspects of the weather using longitude
-                    vs. latitude. The intent was to visualize a world map using weather plots. This site
-                    provides the source data and visualizations created as part of the analysis,
+                    vs. latitude. Factors we looked included: temperature, cloudiness, wind-speed and humidity.
+                    This site provides the source data anf visualizations created as part of the analysis, 
                     as well as explanations and descriptions of any trends and correlations witnessed. </p>
               </div>
     
