--- a/Assignment9_WebVisualizations/lat_cloud.html
+++ b/Assignment9_WebVisualizations/lat_cloud.html
@@ -66,8 +66,7 @@
 
             <div class="pull-right">
               <p>On 12/10/2017, Cloudiness appears to be distibuted fairly evenly
-                around the globe. There was only one location with 100% cloudiness,
-                (Liwale, Tanzania) while there were 130 location with 0% cloudiness. </p>
+                around the globe. There was only one location with 100% cloudiness, Liwale, Tanzania. </p>
             </div>
 
         </div> <!-- 4 Columns -->
